--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~50.0.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^49.0.22",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.2",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "babel-preset-expo": "^9.5.0",
     "typescript": "^5.1.3"
   },
   "private": true
