--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.22",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-vector-icons": "^10.0.3"
   },
