--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
