--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1303.0",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
