--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -23,16 +24,20 @@
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-svg": "^14.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.3",
+    "expo-checkbox": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-preset-expo": "^9.5.0",
+    "react-hook-form": "^7.49.3",
     "typescript": "^5.1.3"
   },
   "private": true
