--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.22",
+    "expo-checkbox": "~2.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1303.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "13.9.0",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-checkbox": "~2.4.0"
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
